[tool.poetry]
name = "taskiq-nats"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]
readme = "README.md"
packages = [{ include = "taskiq_nats" }]

[tool.poetry.dependencies]
python = "^3.7"
nats-py = "^2.2.0"
taskiq = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^2.20.0"
mypy = "^1.1.1"
flake8 = "^4.0.0"
wemake-python-styleguide = "^0.17.0"
autoflake = "^1.4"
yesqa = "^1.4.0"
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"
anyio = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
