[tool.poetry]
name = "taskiq-nats"
version = "0.1.2"
description = "NATS integration for taskiq"
authors = ["taskiq-team <taskiq@norely.com>"]
readme = "README.md"
packages = [{ include = "taskiq_nats" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
homepage = "https://github.com/taskiq-python/taskiq-nats"
repository = "https://github.com/taskiq-python/taskiq-nats"
keywords = ["taskiq", "tasks", "distributed", "async", "nats", "result_backend"]

[tool.poetry.dependencies]
python = "^3.7"
nats-py = "^2.2.0"
taskiq = "^0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^2.20.0"
mypy = "^1.1.1"
flake8 = "^4.0.0"
wemake-python-styleguide = "^0.17.0"
autoflake = "^1.4"
yesqa = "^1.4.0"
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"
anyio = "^3.6.2"
pytest-cov = "^4.0.0"


[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false

[tool.isort]
profile = "black"
multi_line_output = 3


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
